mostrar contenido en la pagina

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <h1>Pokedex</h1>
-    <div class="container">
+    <h1 style="color: white;">Pokedex</h1>
+    <div class="pokemon-container">
 
     </div>
     <!--    <div class="spinner-border text-danger" role="status">
