--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
     <div class="pokemon-container">
 
     </div>
+
+
+    <nav class="pagination">
+        <ul class="pagination">
+            <li id="previos" class="page-item disabled">
+                <span class="page-link">Antes</span>
+            </li>
+            <li class="page-item" id="next">
+                <a class="page-link" href="#">Siguiente</a>
+            </li>
+        </ul>
+    </nav>
+
     <!--    <div class="spinner-border text-danger" role="status">
         <span class="visually-hidden">Loading...</span>
     </div>-->
