--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </ul>
     </nav>
 
-    <!--    <div class="spinner-border text-danger" role="status">
+        <div id="spinner" class="spinner-border text-danger" role="status">
         <span class="visually-hidden">Loading...</span>
-    </div>-->
+    </div>
 
 
 
