--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
     <nav class="pagination">
         <ul class="pagination">
-            <li id="previos" class="page-item disabled">
-                <span class="page-link">Antes</span>
+            <li id="previus" class="page-item" >
+                <a class="page-link" href="#">Antes</a>
             </li>
-            <li class="page-item" id="next">
+            <li id="next" class="page-item" >
                 <a class="page-link" href="#">Siguiente</a>
             </li>
         </ul>
